tests/ui/mismatched_types/assignment-operator-unimplemented.stderr
error[E0368]: binary assignment operation `+=` cannot be applied to type `Foo`
  --> $DIR/assignment-operator-unimplemented.rs:6:3
   |
LL |   a += *b;
   |   -^^^^^^
   |   |
   |   cannot use `+=` on type `Foo`
   |
note: an implementation of `AddAssign` might be missing for `Foo`
  --> $DIR/assignment-operator-unimplemented.rs:1:1
   |
LL | struct Foo;
   | ^^^^^^^^^^ must implement `AddAssign`
note: the trait `AddAssign` must be implemented
  --> $SRC_DIR/core/src/ops/arith.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0368`.
